update: [CORE] [NOTE] Fix left menu collapse bug when navigate to my-profile page back and forth

--- a/src/client/core/shared/components/zone/menu/menu.component.scss
+++ b/src/client/core/shared/components/zone/menu/menu.component.scss
@@ -160,7 +160,7 @@
     }
   }
   &.show {
-  display: block
+    display: block;
   }
 }
 
